add many new options, and try motion serifs in the sample config

--- a/private-build-plans.toml.example
+++ b/private-build-plans.toml.example
@@ -9,32 +9,47 @@ family = "Iosevka Custom"
 # https://github.com/be5invis/Iosevka/tree/dev-v4#configuring-character-variants
 # https://github.com/be5invis/Iosevka/raw/dev-v4/images/charvars.png
 digit-form = "lining"
-turn-v = "curly"
+capital-a = "curly"
 capital-b = "more-asymmetric"
-capital-d = "more-rounded"
-capital-g = "toothless-corner"
+capital-d = "more-rounded-unilateral-motion-serifed"
+capital-e = "standard"
+capital-f = "motion-serifed"
+capital-g = "toothless-corner-hooked"
+capital-h = "standard"
 capital-i = "short-serifed"
 capital-j = "serifless"
-capital-k = "curly"
-capital-m = "hanging"
+capital-k = "curly-motion-serifed"
+capital-l = "standard"
+capital-m = "hanging-motion-serifed"
+capital-n = "standard"
+capital-p = "closed-motion-serifed"
 capital-q = "crossing"
-capital-r = "curly"
+capital-r = "curly-motion-serifed"
+capital-s = "serifless"
+capital-t = "standard"
+capital-u = "toothless-rounded"
+capital-v = "curly"
+capital-w = "curly"
+capital-x = "curly"
 capital-y = "curly"
-a = "doublestorey-tailed"
+capital-z = "with-crossbar"
+a = "double-storey-tailed"
 b = "toothless-corner"
 d = "tailed"
+e = "rounded"
 f = "flat-hook-tailed"
-g = "opendoublestorey"
+g = "double-storey-open"
 h = "straight"
 i = "hooky"
 j = "serifless"
 k = "curly"
 l = "flat-tailed"
-m = "shortleg"
+m = "short-leg"
 n = "earless-corner-tailed"
-p = "eared"
-q = "earless-corner-tailed"
+p = "motion-serifed"
+q = "earless-corner-diagonal-tailed"
 r = "earless-corner"
+s = "serifless"
 t = "standard"
 u = "toothless-rounded"
 v = "curly"
@@ -43,13 +58,18 @@ x = "curly"
 y = "curly"
 z = "with-crossbar"
 eszet = "longs-s-lig"
+turn-v = "curly"
 lambda = "curly"
+cyrl-capital-u = "curly-turn"
 zero = "reverse-slashed"
 one = "nobase"
+two = "curly-neck"
 three = "flattop"
 four = "semi-open"
+five = "oblique-upper-left-bar"
 six = "open-contour"
 seven = "noserif"
+eight = "crossing"
 nine = "straight-bar"
 tilde = "low"
 asterisk = "hexhigh"
@@ -67,6 +87,7 @@ bar = "natural-slope"
 lig-ltgteq = "flat"
 ascii-single-quote = "raised-comma"
 ascii-grave = "straight"
+question = "smooth"
 
 # Override above variants for each slope:
 # [buildPlans.iosevka-custom.variants.upright]
@@ -92,32 +113,47 @@ spacing = "term"
 # https://github.com/be5invis/Iosevka/tree/dev-v4#configuring-character-variants
 # https://github.com/be5invis/Iosevka/raw/dev-v4/images/charvars.png
 digit-form = "lining"
-turn-v = "curly"
+capital-a = "curly"
 capital-b = "more-asymmetric"
-capital-d = "more-rounded"
-capital-g = "toothless-corner"
+capital-d = "more-rounded-unilateral-motion-serifed"
+capital-e = "standard"
+capital-f = "motion-serifed"
+capital-g = "toothless-corner-hooked"
+capital-h = "standard"
 capital-i = "short-serifed"
 capital-j = "serifless"
-capital-k = "curly"
-capital-m = "hanging"
+capital-k = "curly-motion-serifed"
+capital-l = "standard"
+capital-m = "hanging-motion-serifed"
+capital-n = "standard"
+capital-p = "closed-motion-serifed"
 capital-q = "crossing"
-capital-r = "curly"
+capital-r = "curly-motion-serifed"
+capital-s = "serifless"
+capital-t = "standard"
+capital-u = "toothless-rounded"
+capital-v = "curly"
+capital-w = "curly"
+capital-x = "curly"
 capital-y = "curly"
-a = "doublestorey-tailed"
+capital-z = "with-crossbar"
+a = "double-storey-tailed"
 b = "toothless-corner"
 d = "tailed"
+e = "rounded"
 f = "flat-hook-tailed"
-g = "opendoublestorey"
+g = "double-storey-open"
 h = "straight"
 i = "hooky"
 j = "serifless"
 k = "curly"
 l = "flat-tailed"
-m = "shortleg"
+m = "short-leg"
 n = "earless-corner-tailed"
-p = "eared"
-q = "earless-corner-tailed"
+p = "motion-serifed"
+q = "earless-corner-diagonal-tailed"
 r = "earless-corner"
+s = "serifless"
 t = "standard"
 u = "toothless-rounded"
 v = "curly"
@@ -126,13 +162,18 @@ x = "curly"
 y = "curly"
 z = "with-crossbar"
 eszet = "longs-s-lig"
+turn-v = "curly"
 lambda = "curly"
+cyrl-capital-u = "curly-turn"
 zero = "reverse-slashed"
 one = "nobase"
+two = "curly-neck"
 three = "flattop"
 four = "semi-open"
+five = "oblique-upper-left-bar"
 six = "open-contour"
 seven = "noserif"
+eight = "crossing"
 nine = "straight-bar"
 tilde = "low"
 asterisk = "hexhigh"
@@ -150,6 +191,7 @@ bar = "natural-slope"
 lig-ltgteq = "flat"
 ascii-single-quote = "raised-comma"
 ascii-grave = "straight"
+question = "smooth"
 
 # Override above variants for each slope:
 # [buildPlans.iosevka-term-custom.variants.upright]
@@ -175,32 +217,47 @@ spacing = "fontconfig-mono"
 # https://github.com/be5invis/Iosevka/tree/dev-v4#configuring-character-variants
 # https://github.com/be5invis/Iosevka/raw/dev-v4/images/charvars.png
 digit-form = "lining"
-turn-v = "curly"
+capital-a = "curly"
 capital-b = "more-asymmetric"
-capital-d = "more-rounded"
-capital-g = "toothless-corner"
+capital-d = "more-rounded-unilateral-motion-serifed"
+capital-e = "standard"
+capital-f = "motion-serifed"
+capital-g = "toothless-corner-hooked"
+capital-h = "standard"
 capital-i = "short-serifed"
 capital-j = "serifless"
-capital-k = "curly"
-capital-m = "hanging"
+capital-k = "curly-motion-serifed"
+capital-l = "standard"
+capital-m = "hanging-motion-serifed"
+capital-n = "standard"
+capital-p = "closed-motion-serifed"
 capital-q = "crossing"
-capital-r = "curly"
+capital-r = "curly-motion-serifed"
+capital-s = "serifless"
+capital-t = "standard"
+capital-u = "toothless-rounded"
+capital-v = "curly"
+capital-w = "curly"
+capital-x = "curly"
 capital-y = "curly"
-a = "doublestorey-tailed"
+capital-z = "with-crossbar"
+a = "double-storey-tailed"
 b = "toothless-corner"
 d = "tailed"
+e = "rounded"
 f = "flat-hook-tailed"
-g = "opendoublestorey"
+g = "double-storey-open"
 h = "straight"
 i = "hooky"
 j = "serifless"
 k = "curly"
 l = "flat-tailed"
-m = "shortleg"
+m = "short-leg"
 n = "earless-corner-tailed"
-p = "eared"
-q = "earless-corner-tailed"
+p = "motion-serifed"
+q = "earless-corner-diagonal-tailed"
 r = "earless-corner"
+s = "serifless"
 t = "standard"
 u = "toothless-rounded"
 v = "curly"
@@ -209,13 +266,18 @@ x = "curly"
 y = "curly"
 z = "with-crossbar"
 eszet = "longs-s-lig"
+turn-v = "curly"
 lambda = "curly"
+cyrl-capital-u = "curly-turn"
 zero = "reverse-slashed"
 one = "nobase"
+two = "curly-neck"
 three = "flattop"
 four = "semi-open"
+five = "oblique-upper-left-bar"
 six = "open-contour"
 seven = "noserif"
+eight = "crossing"
 nine = "straight-bar"
 tilde = "low"
 asterisk = "hexhigh"
@@ -233,6 +295,7 @@ bar = "natural-slope"
 lig-ltgteq = "flat"
 ascii-single-quote = "raised-comma"
 ascii-grave = "straight"
+question = "smooth"
 
 # Override above variants for each slope:
 # [buildPlans.iosevka-fontconfig-mono-custom.variants.upright]
@@ -258,32 +321,47 @@ spacing = "fixed"
 # https://github.com/be5invis/Iosevka/tree/dev-v4#configuring-character-variants
 # https://github.com/be5invis/Iosevka/raw/dev-v4/images/charvars.png
 digit-form = "lining"
-turn-v = "curly"
+capital-a = "curly"
 capital-b = "more-asymmetric"
-capital-d = "more-rounded"
-capital-g = "toothless-corner"
+capital-d = "more-rounded-unilateral-motion-serifed"
+capital-e = "standard"
+capital-f = "motion-serifed"
+capital-g = "toothless-corner-hooked"
+capital-h = "standard"
 capital-i = "short-serifed"
 capital-j = "serifless"
-capital-k = "curly"
-capital-m = "hanging"
+capital-k = "curly-motion-serifed"
+capital-l = "standard"
+capital-m = "hanging-motion-serifed"
+capital-n = "standard"
+capital-p = "closed-motion-serifed"
 capital-q = "crossing"
-capital-r = "curly"
+capital-r = "curly-motion-serifed"
+capital-s = "serifless"
+capital-t = "standard"
+capital-u = "toothless-rounded"
+capital-v = "curly"
+capital-w = "curly"
+capital-x = "curly"
 capital-y = "curly"
-a = "doublestorey-tailed"
+capital-z = "with-crossbar"
+a = "double-storey-tailed"
 b = "toothless-corner"
 d = "tailed"
+e = "rounded"
 f = "flat-hook-tailed"
-g = "opendoublestorey"
+g = "double-storey-open"
 h = "straight"
 i = "hooky"
 j = "serifless"
 k = "curly"
 l = "flat-tailed"
-m = "shortleg"
+m = "short-leg"
 n = "earless-corner-tailed"
-p = "eared"
-q = "earless-corner-tailed"
+p = "motion-serifed"
+q = "earless-corner-diagonal-tailed"
 r = "earless-corner"
+s = "serifless"
 t = "standard"
 u = "toothless-rounded"
 v = "curly"
@@ -292,13 +370,18 @@ x = "curly"
 y = "curly"
 z = "with-crossbar"
 eszet = "longs-s-lig"
+turn-v = "curly"
 lambda = "curly"
+cyrl-capital-u = "curly-turn"
 zero = "reverse-slashed"
 one = "nobase"
+two = "curly-neck"
 three = "flattop"
 four = "semi-open"
+five = "oblique-upper-left-bar"
 six = "open-contour"
 seven = "noserif"
+eight = "crossing"
 nine = "straight-bar"
 tilde = "low"
 asterisk = "hexhigh"
@@ -316,6 +399,7 @@ bar = "natural-slope"
 lig-ltgteq = "flat"
 ascii-single-quote = "raised-comma"
 ascii-grave = "straight"
+question = "smooth"
 
 # Override above variants for each slope:
 # [buildPlans.iosevka-fixed-custom.variants.upright]
