bitcoin-cash(-qt)
- Remove hacky user/directory management in postinstall scripts
- Add systemd-sysusers and systemd-tmpfiles configs
- Make bitcoin user a system user
- Get rid of potentially harmful directory removals
- Only bundle the GUI binary stuff in the -qt package and make it depend on the
  base package
- Merge packages into a single split PKGBUILD
- Add RuntimeDirectory to service units

--- a/bitcoin.service
+++ b/bitcoin.service
@@ -13,6 +13,7 @@ ExecStart=/usr/bin/bitcoind -daemon=0                       \
 ExecReload=/usr/bin/kill -HUP $MAINPID
 ExecStop=/usr/bin/bitcoind stop
 PrivateTmp=true
+RuntimeDirectory=bitcoin
 
 [Install]
 WantedBy=multi-user.target
