--- a/go-hnrss.conf
+++ b/go-hnrss.conf
@@ -1,3 +1,3 @@
 GIN_MODE=release
 LISTEN_ADDRESS=localhost:65001
-ROOT_REDIRECT="https://edavis.github.io/hnrss/"
+ROOT_REDIRECT="https://hnrss.github.io"
