--- a/pf_defconfig
+++ b/pf_defconfig
@@ -5,35 +5,13 @@ CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3=y
 # CONFIG_BPF_PRELOAD is not set
 # CONFIG_BPF_PRELOAD_UMD is not set
 # CONFIG_MK10 is not set
-# CONFIG_MBARCELONA is not set
-# CONFIG_MBOBCAT is not set
-# CONFIG_MJAGUAR is not set
-# CONFIG_MBULLDOZER is not set
-# CONFIG_MPILEDRIVER is not set
-# CONFIG_MSTEAMROLLER is not set
-# CONFIG_MEXCAVATOR is not set
-# CONFIG_MZEN is not set
-# CONFIG_MZEN2 is not set
-# CONFIG_MZEN3 is not set
-# CONFIG_MCORE2 is not set
-# CONFIG_MNEHALEM is not set
-# CONFIG_MWESTMERE is not set
-# CONFIG_MSILVERMONT is not set
-# CONFIG_MGOLDMONT is not set
-# CONFIG_MGOLDMONTPLUS is not set
-# CONFIG_MSANDYBRIDGE is not set
-# CONFIG_MIVYBRIDGE is not set
-# CONFIG_MHASWELL is not set
-# CONFIG_MBROADWELL is not set
-# CONFIG_MSKYLAKE is not set
-# CONFIG_MSKYLAKEX is not set
-# CONFIG_MCANNONLAKE is not set
-# CONFIG_MICELAKE is not set
-# CONFIG_MCASCADELAKE is not set
-# CONFIG_MCOOPERLAKE is not set
-# CONFIG_MTIGERLAKE is not set
-# CONFIG_MNATIVE is not set
+CONFIG_MNATIVE=y
 CONFIG_UNEVICTABLE_ACTIVEFILE=y
 CONFIG_UNEVICTABLE_ACTIVEFILE_KBYTES_LOW=524288
 CONFIG_UNEVICTABLE_ACTIVEFILE_KBYTES_MIN=262144
 # CONFIG_DEBUG_INFO is not set
+CONFIG_SCHED_BMQ=y
+CONFIG_HZ_1000=y
+CONFIG_HZ=1000
+CONFIG_PREEMPT=y
+CONFIG_HZ_PERIODIC=y
