Add optional EnvironmentFile
Additional changes:
- add trailing newline to systemd service files
- update checksums and bump pkgrel

Co-authored-by: Alice Gaudon <alice@gaudon.pro>

--- a/caddy-api.service
+++ b/caddy-api.service
@@ -20,6 +20,7 @@ User=caddy
 Group=caddy
 Environment=XDG_DATA_HOME=/var/lib
 Environment=XDG_CONFIG_HOME=/var/lib
+EnvironmentFile=-/etc/caddy/envfile
 ExecStart=/usr/bin/caddy run --environ --resume
 
 # Do not allow the process to be restarted in a tight loop. If the
