--- a/nextcloud-app-update-all.service
+++ b/nextcloud-app-update-all.service
@@ -2,8 +2,8 @@
 Description=Nextcloud; update all applications
 
 [Service]
-User=http
-ExecStart=/usr/bin/php7 -f /usr/share/webapps/nextcloud/occ app:update --all
+User=nextcloud
+ExecStart=/usr/bin/php -f /usr/share/webapps/nextcloud/occ app:update --all
 
 [Install]
 WantedBy=basic.target
