--- a/nextcloud-cron.service
+++ b/nextcloud-cron.service
@@ -2,8 +2,8 @@
 Description=Nextcloud; run cron.php
 
 [Service]
-User=http
-ExecStart=/usr/bin/php7 -f /usr/share/webapps/nextcloud/cron.php
+User=nextcloud
+ExecStart=/usr/bin/php -f /usr/share/webapps/nextcloud/cron.php
 
 [Install]
 WantedBy=basic.target
