Updated the PKGBUILD to remove the GitHub Plugin from the build now it has been removed

--- a/PKGBUILD.in
+++ b/PKGBUILD.in
@@ -28,6 +28,7 @@ build()
 {
 	cd "$srcdir/kicad"
 
+	rm -rf build
 	mkdir build
 	cd build
 	cmake .. -G Ninja \
@@ -46,12 +47,12 @@ build()
 		-DKICAD_SCRIPTING_ACTION_MENU=ON \
 		-DKICAD_SCRIPTING_WXPYTHON_PHOENIX=ON \
 		-DKICAD_DATA=/usr/share/kicad-nightly \
-		-DwxWidgets_CONFIG_EXECUTABLE=/usr/bin/wx-config-gtk3 \
-		-DBUILD_GITHUB_PLUGIN=ON
+		-DwxWidgets_CONFIG_EXECUTABLE=/usr/bin/wx-config-gtk3
 	ninja
 
 	cd "$srcdir/kicad-i18n"
 
+	rm -rf build
 	mkdir build
 	cd build
 	cmake .. -G Ninja \
@@ -66,17 +67,16 @@ package()
 	cd "$srcdir/kicad/build"
 	DESTDIR="$pkgdir" ninja install
 
-	mkdir -p "$pkgdir/usr/share"
+	mkdir -p "$pkgdir/usr/share/applications"
 	for prog in bitmap2component eeschema gerbview kicad pcbcalculator pcbnew; do
 		sed -i \
 			-e 's/^Exec=\([^ ]*\)\(.*\)$/Exec=\1-nightly\2/g' \
 			-e 's/^Icon=\(.*\)$/Icon=\1-nightly/g' \
 			-e 's/^Name=\(.*\)$/Name=\1 nightly/g' \
-			"$pkgdir/usr/lib/kicad-nightly/share/applications/$prog.desktop"
-		mv "$pkgdir/usr/lib/kicad-nightly/share/applications/$prog.desktop" \
-			"$pkgdir/usr/lib/kicad-nightly/share/applications/${prog}-nightly.desktop"
+			"$pkgdir/usr/share/kicad-nightly/applications/$prog.desktop"
+		ln -sv "../kicad-nightly/applications/$prog.desktop" \
+			"$pkgdir/usr/share/applications/${prog}-nightly.desktop"
 	done
-	mv "$pkgdir/usr/lib/kicad-nightly/share/applications" "$pkgdir/usr/share"
 
 	cd "$srcdir"
 	mkdir -p "$pkgdir/usr/share/kicad-nightly"
