--- a/pf_defconfig
+++ b/pf_defconfig
@@ -1,17 +1,26 @@
-# CONFIG_LOCALVERSION_AUTO is not set
-# CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE is not set
-CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3=y
-# CONFIG_USERMODE_DRIVER is not set
-# CONFIG_BPF_PRELOAD is not set
-# CONFIG_BPF_PRELOAD_UMD is not set
-# CONFIG_MK10 is not set
-CONFIG_MNATIVE=y
-CONFIG_UNEVICTABLE_ACTIVEFILE=y
-CONFIG_UNEVICTABLE_ACTIVEFILE_KBYTES_LOW=524288
-CONFIG_UNEVICTABLE_ACTIVEFILE_KBYTES_MIN=262144
-# CONFIG_DEBUG_INFO is not set
 CONFIG_SCHED_BMQ=y
 CONFIG_HZ_1000=y
 CONFIG_HZ=1000
 CONFIG_PREEMPT=y
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_03=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_MNATIVE=y
+CONFIG_PCIEASPM_PERFORMANCE=y
+CONFIG_X86_INTEL_TSX_MODE_OFF=y
 CONFIG_HZ_PERIODIC=y
+CONFIG_X86_RESERVE_LOW=4
+CONFIG_NODES_SHIFT=1
+CONFIG_CPU_FREQ=y
+CONFIG_LEGACY_VSYSCALL_EMULATE=y
+CONFIG_SCSI_SCAN_ASYNC=y
+# CONFIG_SLUB_CPU_PARTIAL is not set
+# CONFIG_BSD_PROCESS_ACCT is not set
+# CONFIG_LOCALVERSION_AUTO is not set
+# CONFIG_USERMODE_DRIVER is not set
+# CONFIG_BPF_PRELOAD is not set
+# CONFIG_BPF_PRELOAD_UMD is not set
+# CONFIG_MK10 is not set
+CONFIG_UNEVICTABLE_ACTIVEFILE=y
+CONFIG_UNEVICTABLE_ACTIVEFILE_KBYTES_LOW=524288
+CONFIG_UNEVICTABLE_ACTIVEFILE_KBYTES_MIN=262144
+# CONFIG_DEBUG_INFO is not set
