--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,9 @@ image: "registry.devseed.de/all-the-things/docker-archlinux"
 test:makepkg:
   script:
     # Test building a source package
-    - sudo -u nobody makepkg -C -S --log --noconfirm
+    - sudo -u builder makepkg -C -S --log --noconfirm
     # Test building and installing the package
-    - sudo -u nobody makepkg -C -i --log --noconfirm
+    - sudo -u builder makepkg -C -i --log --noconfirm
 
       #curl --silent "https://api.github.com/repos/$1/releases/latest" | # Get latest release from GitHub api
       #grep '"tag_name":' |                                            # Get tag line
