--- a/customization.cfg
+++ b/customization.cfg
@@ -183,7 +183,7 @@ _kernel_localversion=""
 
 # community patches - add patches (separated by a space) of your choice by name from the community-patches dir
 # example: _community_patches="clear_nack_in_tend_isr.myrevert ffb_regression_fix.mypatch 0008-drm-amd-powerplay-force-the-trim-of-the-mclk-dpm-levels-if-OD-is-enabled.mypatch"
-_community_patches="futex2_interface.mypatch RDTSC-KVM-Handler.mypatch"
+_community_patches=""
 
 # You can use your own patches by putting them in a subfolder called linux<version>-tkg-userpatches (e.g. linux510-tkg-userpatches) next to the PKGBUILD and giving them the .mypatch extension.
 # You can also revert patches by putting them in that same folder and giving them the .myrevert extension.
