--- a/mindmaster-cn.desktop
+++ b/mindmaster-cn.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=MindMaster
 Icon=mindmaster
-Exec=mindmaster
+Exec=env XDG_CURRENT_DESKTOP=GNOME mindmaster
 Comment=多功能，高颜值，易使用的专业思维导图软件
 Categories=Office;Graphics;
 Terminal=false
