--- a/mindmaster-cn.desktop
+++ b/mindmaster-cn.desktop
@@ -1,9 +1,27 @@
 [Desktop Entry]
-Version=1.0
-Type=Application
 Name=MindMaster
-Icon=mindmaster
-Exec=env XDG_CURRENT_DESKTOP=GNOME mindmaster
-Comment=多功能，高颜值，易使用的专业思维导图软件
-Categories=Office;Graphics;
+Name[en_US]=mindmaster
+Categories=Office;MindMap;Brainstorming;Mind;Map;
+MimeType=application/x-emmx
+Exec=env XDG_CURRENT_DESKTOP=GNOME mindmaster %U
 Terminal=false
+Type=Application
+Icon=/opt/MindMaster-8/mindmaster.png
+Encoding=UTF-8
+Hidden=false
+StartupNotify=false
+X-Deepin-Vendor=EdrawSoft
+Keywords=MindMaster;Mind;Brainstorming;Map;
+Keywords[de]=MindMaster;MindMap;
+Keywords[fr]=MindMaster;MindMap;
+Keywords[ja]=MindMaster;MindMap;
+Keywords[es]=MindMaster;Diagrama;
+Keywords[zh_CN]=MindMaster;MindMap;
+Keywords[zh_TW]=MindMaster;MindMap;
+Comment=Mind Map Software
+Comment[de]=mind map - software
+Comment[fr]=Logiciel de carte
+Comment[ja]=マインドマップソフト
+Comment[es]=Mind Map Software
+Comment[zh_CN]=思维导图软件
+Comment[zh_TW]=心智圖軟件
