--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,16 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json"
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "packageRules": [
+    {
+      "matchDatasources": ["github-releases"],
+      "matchPackageNames": ["lDeFiCh/app"],
+      "automerge": false
+    }
+  ],
+  "regexManagers": [
+    {
+      "fileMatch": ["^PKGBUILD$"],
+      "matchStrings": ["pkgver=(?<currentValue>.*?)\n"]
+    }
+  ]
 }
