--- a/thunderbird60.desktop
+++ b/thunderbird60.desktop
@@ -58,7 +58,7 @@ GenericName[zh_TW]=郵件用戶端
 Exec=/usr/bin/thunderbird60 %u
 Terminal=false
 Type=Application
-Icon=thunderbird
+Icon=thunderbird60
 Categories=Network;Email;
 MimeType=message/rfc822;x-scheme-handler/mailto;application/x-xpinstall;
 StartupNotify=true
