added 0000-uninitialized_attributes.patch added 2735-attaching_with_gdb_doesnt_work.patch -> https://github.com/NationalSecurityAgency/ghidra/issues/2735 added desktop icon to run ghidra as root (recommended for gdb attach) added polkit dependency and ghidra.policy file to request root privileges with ghidra-root.desktop shortcut

--- a/ghidra.desktop
+++ b/ghidra.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=Ghidra
 Comment=Software reverse engineering framework
-Exec=ghidra
+Exec=/opt/ghidra/ghidraRun
 Icon=ghidra
 Categories=Utility;
 Terminal=false
