--- a/etterna.desktop
+++ b/etterna.desktop
@@ -2,7 +2,7 @@
 Version=1.1
 Name=Etterna
 Comment=A advanced cross-platform rhythm game focused on keyboard play.
-Exec=/opt/etterna/Etterna
+Exec=env vblank_mode=0 /opt/etterna/Etterna
 Icon=/opt/etterna/icon.ico
 Terminal=false
 Type=Application
