--- a/dragonwolf.desktop
+++ b/dragonwolf.desktop
@@ -90,7 +90,7 @@ Keywords[ca]=Internet;WWW;Navegador;Web;Explorador;Explorer
 Keywords[cs]=Internet;WWW;Prohlížeč;Web;Explorer
 Keywords[da]=Internet;Internettet;WWW;Browser;Browse;Web;Surf;Nettet
 Keywords[de]=Internet;WWW;Browser;Web;Explorer;Webseite;Site;surfen;online;browsen
-Keywords[el]=Internet;WWW;Browser;Web;Explorer;Διαδίκτυο;Περιηγητής;DragonWolf;Φιρεφοχ;Ιντερνετ
+Keywords[el]=Internet;WWW;Browser;Web;Explorer;Διαδίκτυο;Περιηγητής;LibreWolf;Φιρεφοχ;Ιντερνετ
 Keywords[es]=Explorador;Internet;WWW
 Keywords[fi]=Internet;WWW;Browser;Web;Explorer;selain;Internet-selain;internetselain;verkkoselain;netti;surffaa
 Keywords[fr]=Internet;WWW;Browser;Web;Explorer;Fureteur;Surfer;Navigateur
@@ -110,7 +110,7 @@ Keywords[sl]=Internet;WWW;Browser;Web;Explorer;Brskalnik;Splet
 Keywords[tr]=İnternet;WWW;Tarayıcı;Web;Gezgin;Web sitesi;Site;sörf;çevrimiçi;tara
 Keywords[uk]=Internet;WWW;Browser;Web;Explorer;Інтернет;мережа;переглядач;оглядач;браузер;веб;файрфокс;вогнелис;перегляд
 Keywords[vi]=Internet;WWW;Browser;Web;Explorer;Trình duyệt;Trang web
-Keywords[zh_CN]=Internet;WWW;Browser;Web;Explorer;网页;浏览;上网;火狐;DragonWolf;ff;互联网;网站;
+Keywords[zh_CN]=Internet;WWW;Browser;Web;Explorer;网页;浏览;上网;火狐;LibreWolf;ff;互联网;网站;
 Keywords[zh_TW]=Internet;WWW;Browser;Web;Explorer;網際網路;網路;瀏覽器;上網;網頁;火狐
 Exec=/usr/lib/librewolf/librewolf %u
 Icon=dragonwolf
@@ -121,7 +121,7 @@ MimeType=text/html;text/xml;application/xhtml+xml;x-scheme-handler/http;x-scheme
 StartupNotify=true
 StartupWMClass=DragonWolf
 Categories=Network;WebBrowser;
-Actions=new-windo0x000000w;new-private-window;
+Actions=new-window;new-private-window;
 
 [Desktop Action new-window]
 Name=New Window
