--- a/mozconfig.cfg
+++ b/mozconfig.cfg
@@ -42,3 +42,7 @@ ac_add_options --enable-calendar
 ac_add_options --disable-jack
 ac_add_options --disable-crashreporter
 ac_add_options --disable-updater
+
+# System addons
+ac_add_options --with-unsigned-addon-scopes=app,system
+ac_add_options --allow-addon-sideload
