--- a/moonraker.conf
+++ b/moonraker.conf
@@ -17,6 +17,12 @@ enable_debug_logging: True
 #   (ie: "/") and moonraker must have read and write access permissions
 #   for this directory.
 config_path: /etc/klipper
+#   The path to the folder that stores Moonraker's lmdb database files.
+#   It is NOT recommended to place this file in a location that is served by
+#   Moonraker (such as the "config_path" or the location where gcode
+#   files are stored).  If the folder does not exist an attempt will be made
+#   to create it.  The default is ~/.moonraker_database.
+database_path: /var/opt/moonraker/db
 #   The maximum number of temperature values to store for each sensor. Note
 #   that this value also applies to the "target", "power", and "fan_speed"
 #   if the sensor reports them.  The default is 1200, which is enough to
