--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-/*.tar.xz
-/*.tar.gz
-/*.tar.zst
-/*.deb
-/pkg
-/src
+# Ignore everything
+*
+
+# But not these files...
+!.gitignore
+!PKGBUILD
+!.SRCINFO
